// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/views/Navigation.vue Renders posts and profile for a person 1`] = `
<section
  class="page"
  id="navigation"
>
  <nav
    class=""
  >
    <router-link
      class="black"
      tabindex="-1"
      to="/account"
    >
      Scott
    </router-link>
     
    <router-link
      class="green"
      tabindex="-1"
      to="/"
    >
      Tonight!
    </router-link>
     
    <router-link
      class="green"
      tabindex="-1"
      to="/posters"
    >
      Posters
    </router-link>
     
    <router-link
      class="blue"
      tabindex="-1"
      to="/feed"
    >
      Feed
    </router-link>
     
    <router-link
      class="blue"
      tabindex="-1"
      to="/phone-book"
    >
      Relations
    </router-link>
     
    <!---->
     
    <!---->
  </nav>
   
  <aside>
    <!---->
     
    <div
      itemprop="posts"
    />
  </aside>
</section>
`;

exports[`@/views/Navigation.vue navigating the application handling post events posting:false should render the main navigation 1`] = `
<section
  class="page"
  id="navigation"
>
  <nav
    class=""
  >
    <router-link
      class="black"
      tabindex="-1"
      to="/account"
    >
      Scott
    </router-link>
     
    <router-link
      class="green"
      tabindex="-1"
      to="/"
    >
      Tonight!
    </router-link>
     
    <router-link
      class="green"
      tabindex="-1"
      to="/posters"
    >
      Posters
    </router-link>
     
    <router-link
      class="blue"
      tabindex="-1"
      to="/feed"
    >
      Feed
    </router-link>
     
    <router-link
      class="blue"
      tabindex="-1"
      to="/phone-book"
    >
      Relations
    </router-link>
     
    <!---->
     
    <!---->
  </nav>
   
  <aside>
    <!---->
     
    <div
      itemprop="posts"
    />
  </aside>
</section>
`;

exports[`@/views/Navigation.vue navigating the application handling post events posting:true should hide main navigation 1`] = `
<section
  class="page posting"
  id="navigation"
>
  <nav
    class=""
  >
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <button
      tabindex="-1"
    >
      Done
    </button>
     
    <!---->
  </nav>
   
  <aside>
    <!---->
     
    <div
      itemprop="posts"
    />
  </aside>
</section>
`;
